# ferrum

./: CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  ferrum.toml
ferrum/: Cargo.toml
ferrum-core/: Cargo.toml
ferrum-core/src/: config.rs  engine.rs  lib.rs  registry.rs
ferrum-e2e/: Cargo.toml
ferrum-e2e/tests/: e2e.rs
ferrum-graph/: Cargo.toml
ferrum-graph/src/: main.rs
ferrum-sdk/: Cargo.toml
ferrum-sdk/src/: hook.rs  lib.rs  node.rs  score.rs  sensor.rs  terminator.rs  transformer.rs
ferrum/src/: lib.rs  loader.rs  metrics.rs  proxy.rs
plugins/hooks/syslog/: Cargo.toml
plugins/hooks/syslog/src/: lib.rs
plugins/hooks/webhook/: Cargo.toml
plugins/hooks/webhook/src/: lib.rs
plugins/sensors/asn/: Cargo.toml
plugins/sensors/asn/src/: lib.rs
plugins/sensors/body-size/: Cargo.toml
plugins/sensors/body-size/src/: lib.rs
plugins/sensors/cookie/: Cargo.toml
plugins/sensors/cookie/src/: lib.rs
plugins/sensors/geo/: Cargo.toml
plugins/sensors/geo/src/: lib.rs
plugins/sensors/ip/: Cargo.toml
plugins/sensors/ip/src/: lib.rs
plugins/sensors/rate-limit/: Cargo.toml
plugins/sensors/rate-limit/src/: lib.rs
plugins/sensors/regex/: Cargo.toml
plugins/sensors/regex/src/: lib.rs
plugins/sensors/string-match/: Cargo.toml
plugins/sensors/string-match/src/: lib.rs
plugins/sensors/subnet/: Cargo.toml
plugins/sensors/subnet/src/: lib.rs
plugins/terminators/block/: Cargo.toml
plugins/terminators/drop/: Cargo.toml
plugins/terminators/pass/: Cargo.toml
plugins/terminators/rate-limited/: Cargo.toml
plugins/terminators/redirect/: Cargo.toml
plugins/terminators/timeout/: Cargo.toml
plugins/transformers/and/: Cargo.toml
plugins/transformers/clamp/: Cargo.toml
plugins/transformers/not/: Cargo.toml
plugins/transformers/or/: Cargo.toml
plugins/transformers/weighted-sum/: Cargo.toml
xferrum/: Cargo.toml
xferrum/src/: main.rs
(+11 files in other folders)
