[workspace]
members = [
    "ferrum-sdk",
    "ferrum-core",
    "ferrum",
    "ferrum-graph",
    "xferrum",
    "ferrum-e2e",
    "plugins/sensors/ip",
    "plugins/sensors/subnet",
    "plugins/sensors/geo",
    "plugins/sensors/regex",
    "plugins/sensors/rate-limit",
    "plugins/sensors/string-match",
    "plugins/sensors/cookie",
    "plugins/sensors/asn",
    "plugins/sensors/body-size",
    "plugins/transformers/weighted-sum",
    "plugins/transformers/or",
    "plugins/transformers/and",
    "plugins/transformers/not",
    "plugins/transformers/clamp",
    "plugins/hooks/syslog",
    "plugins/hooks/webhook",
    "plugins/terminators/block",
    "plugins/terminators/pass",
    "plugins/terminators/drop",
    "plugins/terminators/redirect",
    "plugins/terminators/rate-limited",
    "plugins/terminators/timeout",
]
resolver = "2"
