[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"

[lib]
name = "ferrum"
path = "src/lib.rs"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
ferrum-sdk = { path = "../ferrum-sdk" }
pingora = { version = "0.8", features = ["lb"] }
pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-http = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
lazy_static = "1"
async-trait = "0.1"
bytes = "1"
rustc-hash = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
